// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[check] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[check] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[multiple select#multiple values] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[multiple select#multiple values] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[multiple select#negative] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[multiple select#negative] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[multiple select#unique values] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[multiple select#unique values] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[operator AND] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[operator AND] don't display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[operator OR] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[operator OR] display 2`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[operator OR] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[single select#multiple values] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[single select#multiple values] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[single select#negative] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[single select#negative] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`[single select#unique values] display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;

exports[`[single select#unique values] don't display 1`] = `
<div id="app">
    <!---->
</div>
`;

exports[`field-display can mount field display 1`] = `
<div id="app">
    __MOCKED_SFC_SharpFieldContainer__
</div>
`;
